Clean-up/Format MavenTargetLocation and MavenImpl