@@ -18,11 +18,11 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.nio.file.Files;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -33,6 +33,7 @@ import java.util.Set;
 import java.util.function.Predicate;
 import java.util.jar.JarFile;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.zip.ZipEntry;
 
 import org.apache.commons.io.FileUtils;
@@ -166,9 +167,6 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 			List<ArtifactRepository> repositories = getAvailableArtifactRepositories(maven);
 			SubMonitor subMonitor = SubMonitor.convert(monitor, roots.size() * 100);
 			for (MavenTargetDependency root : roots) {
-				if (subMonitor.isCanceled()) {
-					break;
-				}
 				resolveDependency(root, maven, repositories, bundles, cacheManager, subMonitor.split(100));
 			}
 			if (featureTemplate != null) {
@@ -177,9 +175,8 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 					generateFeature(bundles, true);
 				}
 			}
-			Iterator<IModel> iterator = bundles.features.stream().map(tf -> tf.getFeatureModel()).iterator();
-			while (iterator.hasNext()) {
-				IModel model = iterator.next();
+			Iterable<IModel> models = bundles.features.stream().map(TargetFeature::getFeatureModel)::iterator;
+			for (IModel model : models) {
 				model.load();
 			}
 			if (subMonitor.isCanceled()) {
@@ -201,27 +198,23 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		IFeature feature = featureModel.getFeature();
 		if (source) {
 			feature.setId(feature.getId() + SOURCE_SUFFIX);
-			String label = feature.getLabel();
-			if (label != null && !label.isBlank()) {
-				feature.setLabel(label + " (source)");
+			String featureLabel = feature.getLabel();
+			if (featureLabel != null && !featureLabel.isBlank()) {
+				feature.setLabel(featureLabel + " (source)");
 			}
-			for (IFeaturePlugin plugin : feature.getPlugins()) {
-				if (!plugin.getId().endsWith(SOURCE_SUFFIX)) {
-					feature.removePlugins(new IFeaturePlugin[] { plugin });
-				}
-			}
+			Stream<IFeaturePlugin> nonSourcePlugins = Arrays.stream(feature.getPlugins())
+					.filter(p -> !p.getId().endsWith(SOURCE_SUFFIX));
+			feature.removePlugins(nonSourcePlugins.toArray(IFeaturePlugin[]::new));
 		} else {
 			bundleFilter = Predicate.not(bundleFilter);
 		}
-		Iterator<TargetBundle> featurePlugins = bundles.bundles() //
+		Iterable<TargetBundle> featurePlugins = bundles.bundles() //
 				.filter(e -> !isExcluded(e.getKey()) && !isIgnored(e.getKey()))//
 				.map(Entry::getValue)//
 				.filter(bundleFilter)//
 				.sorted(Comparator.comparing(TargetBundle::getBundleInfo,
-						Comparator.comparing(BundleInfo::getSymbolicName)))
-				.iterator();
-		while (featurePlugins.hasNext()) {
-			TargetBundle targetBundle = featurePlugins.next();
+						Comparator.comparing(BundleInfo::getSymbolicName)))::iterator;
+		for (TargetBundle targetBundle : featurePlugins) {
 			feature.addPlugins(new IFeaturePlugin[] { new MavenFeaturePlugin(targetBundle, featureModel) });
 		}
 		featureModel.makeReadOnly();
@@ -283,8 +276,8 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 
 	private File getFeatureFile(Artifact artifact, CacheManager cacheManager) {
 		File baseFile = artifact.getFile();
-		
-		if(baseFile == null) {
+
+		if (baseFile == null) {
 			return null;
 		} else if (baseFile.isDirectory()) {
 			File featureFile = new File(baseFile, ICoreConstants.FEATURE_FILENAME_DESCRIPTOR);
@@ -292,46 +285,46 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		} else if (DEFAULT_PACKAGE_TYPE.equals(FilenameUtils.getExtension(baseFile.getName()))) {
 			return unpackFeatureFile(artifact, cacheManager);
 		}
-		
+
 		return null;
 	}
-	
+
 	private File unpackFeatureFile(Artifact artifact, CacheManager cacheManager) {
 		try {
 			return cacheManager.accessArtifactFile(artifact, file -> {
 				// Unpack feature.xml into the same directory as the jar
 				File featureFile = new File(file.getParentFile(), ICoreConstants.FEATURE_FILENAME_DESCRIPTOR);
-				
+
 				// May have already been unpacked -> reuse
-				if(featureFile.exists()) {
+				if (featureFile.exists()) {
 					return featureFile;
 				}
-				
+
 				File markerFile = new File(file.getParentFile(), NOT_A_FEATURE);
-				
+
 				// Artifact has already been checked during an earlier cycle
-				if(markerFile.exists() && markerFile.lastModified() >= file.lastModified()) {
+				if (markerFile.exists() && markerFile.lastModified() >= file.lastModified()) {
 					return null;
 				}
-				
+
 				try (JarFile jar = new JarFile(artifact.getFile())) {
 					ZipEntry entry = jar.getEntry(ICoreConstants.FEATURE_FILENAME_DESCRIPTOR);
-					
+
 					// feature.xml is missing -> not an Eclipse feature
-					if(entry == null) {
+					if (entry == null) {
 						FileUtils.touch(markerFile);
 						return null;
 					}
-					
+
 					Files.copy(jar.getInputStream(entry), featureFile.toPath());
-					
+
 					return featureFile;
-				} catch(IOException e) {
+				} catch (IOException e) {
 					LOGGER.error(e.getLocalizedMessage(), e);
 					return null;
 				}
 			});
-		} catch(Exception e) {
+		} catch (Exception e) {
 			LOGGER.error(e.getLocalizedMessage(), e);
 			return null;
 		}
@@ -340,7 +333,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 	private void addBundleForArtifact(Artifact artifact, CacheManager cacheManager, IMaven maven,
 			TargetBundles targetBundles) {
 		File featureFile = getFeatureFile(artifact, cacheManager);
-		
+
 		if (isPomType(artifact)) {
 			targetBundles.features
 					.add(new MavenTargetFeature(new MavenPomFeatureModel(artifact, targetBundles, false)));
@@ -357,7 +350,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 				LOGGER.error(e.getLocalizedMessage(), e);
 			}
 			return;
-		}		
+		}
 		BNDInstructions bndInstructions = instructionsMap.get(getKey(artifact));
 		if (bndInstructions == null) {
 			// no specific instructions for this artifact, try using the location default
@@ -371,9 +364,9 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 			if (includeSource) {
 				try {
 					List<ArtifactRepository> repositories = getAvailableArtifactRepositories(maven);
-					Artifact resolve = RepositoryUtils.toArtifact(maven.resolve(artifact.getGroupId(),
-							artifact.getArtifactId(), artifact.getBaseVersion(), artifact.getExtension(), "sources",
-							repositories, new NullProgressMonitor()));
+					Artifact resolve = RepositoryUtils.toArtifact(
+							maven.resolve(artifact.getGroupId(), artifact.getArtifactId(), artifact.getBaseVersion(),
+									artifact.getExtension(), "sources", repositories, new NullProgressMonitor()));
 					MavenSourceBundle sourceBundle = new MavenSourceBundle(bundle.getBundleInfo(), resolve,
 							cacheManager);
 					targetBundles.addBundle(resolve, sourceBundle);
@@ -397,9 +390,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		int updated = 0;
 		for (MavenTargetDependency dependency : roots) {
 			MavenTargetDependency result = update(dependency, monitor);
-
 			latest.add(result);
-
 			if (!dependency.matches(result)) {
 				updated++;
 			}
@@ -409,9 +400,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		}
 
 		return new MavenTargetLocation(label, latest, extraRepositories, metadataMode, dependencyDepth,
-				dependencyScopes,
-				includeSource, instructionsMap.values(), excludedArtifacts, featureTemplate);
-
+				dependencyScopes, includeSource, instructionsMap.values(), excludedArtifacts, featureTemplate);
 	}
 
 	public MavenTargetDependency update(MavenTargetDependency source, IProgressMonitor monitor) throws CoreException {
@@ -517,14 +506,9 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		if (this == obj) {
 			return true;
 		}
-		if (obj == null) {
-			return false;
-		}
-		if (getClass() != obj.getClass()) {
-			return false;
-		}
-		MavenTargetLocation other = (MavenTargetLocation) obj;
-		return Objects.equals(roots, other.roots) && Objects.equals(dependencyScopes, other.dependencyScopes)
+		return obj instanceof MavenTargetLocation other //
+				&& Objects.equals(roots, other.roots)//
+				&& Objects.equals(dependencyScopes, other.dependencyScopes)
 				&& Objects.equals(failedArtifacts, other.failedArtifacts);
 	}
 
@@ -551,7 +535,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		}
 		if (!roots.isEmpty()) {
 			xml.append("<" + ELEMENT_DEPENDENCIES + ">");
-			roots.stream().sorted(Comparator.comparing(MavenTargetDependency::getKey)).forEach(dependency -> {
+			roots.stream().sorted(Comparator.comparing(MavenTargetDependency::getKey)).forEachOrdered(dependency -> {
 				xml.append("<" + ELEMENT_DEPENDENCY + ">");
 				element(xml, ELEMENT_GROUP_ID, dependency.getGroupId());
 				element(xml, ELEMENT_ARTIFACT_ID, dependency.getArtifactId());
@@ -565,7 +549,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		if (!extraRepositories.isEmpty()) {
 			xml.append("<" + ELEMENT_REPOSITORIES + ">");
 			extraRepositories.stream().sorted(Comparator.comparing(MavenTargetRepository::getUrl))
-					.forEach(repository -> {
+					.forEachOrdered(repository -> {
 						xml.append("<" + ELEMENT_REPOSITORY + ">");
 						element(xml, ELEMENT_REPOSITORY_ID, repository.getId());
 						element(xml, ELEMENT_REPOSITORY_URL, repository.getUrl());
@@ -574,7 +558,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 			xml.append("</" + ELEMENT_REPOSITORIES + ">");
 		}
 		instructionsMap.values().stream().filter(Predicate.not(BNDInstructions::isEmpty))
-				.sorted(Comparator.comparing(BNDInstructions::getKey)).forEach(bnd -> {
+				.sorted(Comparator.comparing(BNDInstructions::getKey)).forEachOrdered(bnd -> {
 					String instructions = bnd.getInstructions();
 					xml.append("<" + ELEMENT_INSTRUCTIONS);
 					attribute(xml, ATTRIBUTE_INSTRUCTIONS_REFERENCE, bnd.getKey());
@@ -582,34 +566,22 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 					xml.append(instructions);
 					xml.append("\r\n]]></" + ELEMENT_INSTRUCTIONS + ">");
 				});
-		excludedArtifacts.stream().sorted().forEach(ignored -> {
-			element(xml, ELEMENT_EXCLUDED, ignored);
-		});
+		excludedArtifacts.stream().sorted().forEachOrdered(ignored -> element(xml, ELEMENT_EXCLUDED, ignored));
 		xml.append("</location>");
-		String string = xml.toString();
-		return string;
+		return xml.toString();
 	}
 
 	private static void element(StringBuilder xml, String name, String value) {
 		if (value != null && !value.isBlank()) {
-			xml.append('<');
-			xml.append(name);
-			xml.append('>');
+			xml.append('<').append(name).append('>');
 			xml.append(value);
-			xml.append("</");
-			xml.append(name);
-			xml.append('>');
+			xml.append("</").append(name).append('>');
 		}
 	}
 
 	private static void attribute(StringBuilder xml, String name, String value) {
 		if (value != null && !value.isBlank()) {
-			xml.append(' ');
-			xml.append(name);
-			xml.append('=');
-			xml.append('"');
-			xml.append(value);
-			xml.append('"');
+			xml.append(' ').append(name).append('=').append('"').append(value).append('"');
 		}
 	}
 
@@ -626,10 +598,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 	}
 
 	public Collection<String> getDependencyScopes() {
-		if (dependencyScopes.isEmpty()) {
-			return DEFAULT_DEPENDENCY_SCOPES;
-		}
-		return dependencyScopes;
+		return dependencyScopes.isEmpty() ? DEFAULT_DEPENDENCY_SCOPES : dependencyScopes;
 	}
 
 	public DependencyDepth getDependencyDepth() {
@@ -638,10 +607,7 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 
 	public boolean isIgnored(Artifact artifact) {
 		TargetBundles bundles = targetBundles;
-		if (bundles == null) {
-			return false;
-		}
-		return bundles.ignoredArtifacts.contains(artifact);
+		return bundles != null && bundles.ignoredArtifacts.contains(artifact);
 	}
 
 	public boolean isFailed(Artifact artifact) {
@@ -683,8 +649,9 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 		}
 		return null;
 	}
+
 	public Collection<String> getExcludes() {
-		return Collections.unmodifiableCollection(excludedArtifacts);
+		return Collections.unmodifiableSet(excludedArtifacts);
 	}
 
 	public Collection<BNDInstructions> getInstructions() {
@@ -692,17 +659,16 @@ public class MavenTargetLocation extends AbstractBundleContainer {
 	}
 
 	public MavenTargetLocation withInstructions(Collection<BNDInstructions> instructions) {
-		return new MavenTargetLocation(label, roots.stream().map(MavenTargetDependency::copy).collect(Collectors.toList()), extraRepositories, metadataMode, dependencyDepth, dependencyScopes,
-				includeSource, instructions, excludedArtifacts, featureTemplate);
+		return new MavenTargetLocation(label, roots.stream().map(MavenTargetDependency::copy).toList(),
+				extraRepositories, metadataMode, dependencyDepth, dependencyScopes, includeSource, instructions,
+				excludedArtifacts, featureTemplate);
 	}
 
 	public MavenTargetLocation withoutRoot(MavenTargetDependency toRemove) {
 		return new MavenTargetLocation(label,
 				roots.stream().filter(root -> root != toRemove).map(root -> root.copy()).collect(Collectors.toList()),
-				extraRepositories,
-				metadataMode, dependencyDepth, dependencyScopes, includeSource, instructionsMap.values(),
-				excludedArtifacts, featureTemplate);
+				extraRepositories, metadataMode, dependencyDepth, dependencyScopes, includeSource,
+				instructionsMap.values(), excludedArtifacts, featureTemplate);
 	}
-
 
 }
